--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
-<html>
+  <html>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/styles.css">
-    <title></title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/styles.css" />
+    <title>John Barry</title>
   </head>
+  <body>
+    <header>
+    
+    <hr>
+    <a href="#john_barry">JOHN BARRY</a>
+    <a href="#dr_no">DR. NO</a>
+    <a href="#james_bond_theme">JAMES BOND THEME</a>
+    <hr> 
 
-  <body></body>
+  </header>
+
+  </body>
 </html>
