--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
       <img src="img/photo_john_barry.jpg">
       
-      <h2>JOHN BARRY</h2>
+      <h2 id="john_barry">JOHN BARRY</h2>
       <p>
         John Barry est né le 3 novembre 1933 à York Angleterre et mort le 30 
         janvier 2011 était un compositeur et chef d'orchestre britannique de 
@@ -33,6 +33,9 @@
     </header>
 
     <main>
+      <h1 
+       id="dr_no"><img src="img/dr_no_tittle.jpg">
+      </h1>
 
       <img src="img/terence_young_portrait.png">
 
@@ -55,7 +58,7 @@
 
       <img src="img/poster_dr_no.jpg">
 
-      <h2>JAMES BOND THEME</h2>
+      <h2 id="james_bond_theme">JAMES BOND THEME</h2>
 
       <p>
         Le «James Bond Theme» est le principal thème musical des films de James 
