html done but il manque les images 3 images du header

--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
 
       <img src="img/terence_young_portrait.png">
 
+      <h3>TERENCE YOUNG</h3>
+
       <p>
         DR. NO est un film d'espionnage de 1962 réalisé par Terence Young. C'est 
         le premier film de la série James Bond. Mettant en vedette Sean Connery, 
