"dr. no" et footer now are red and yellow

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     
       <hr>
       <p>
-      <a href="#john_barry">JOHN BARRY</a>
-      <a href="#dr_no">DR. NO</a>
-      <a href="#james_bond_theme">JAMES BOND THEME</a>
-    </p>
+        <a href="#john_barry">JOHN BARRY |</a>
+        <a href="#dr_no">DR. NO |</a>
+        <a href="#james_bond_theme">JAMES BOND THEME</a>
+      </p>
       <hr> 
 
       <img src="img/photo_john_barry.jpg">
@@ -35,7 +35,8 @@
       <p>
         Il a composé les partitions de onze des films de James Bond entre 1963 
         et 1987, ainsi que l'arrangement et l'interprétation du «James Bond 
-        Theme» pour le premier film de la série, DR. NO.
+        Theme» pour le premier film de la série, <strong class="yellow">DR.
+        </strong> <strong class="red"> NO.</strong>
       </p>
 
     </header>
@@ -50,7 +51,8 @@
       <h2>TERENCE YOUNG</h2>
 
       <p>
-        DR. NO est un film d'espionnage de 1962 réalisé par Terence Young. C'est 
+        <strong class="yellow">DR. </strong> <strong class="red"> NO</strong> 
+        est un film d'espionnage de 1962 réalisé par Terence Young. C'est 
         le premier film de la série James Bond. Mettant en vedette Sean Connery, 
         Ursula Andress, Joseph Wiseman et Jack Lord, il a été adapté par Richard 
         Maibaum, Johanna Harwood et Berkely Mather du roman de 1958 du même nom 
@@ -59,7 +61,8 @@
 
       <p>
         Dans ce film qui a lancé la saga James Bond, l'agent 007 (Sean Connery) 
-        affronte le mystérieux DR NO, un génie scientifique déterminé à détruire 
+        affronte le mystérieux <strong class="yellow">DR. </strong> <strong 
+        class="red"> NO</strong>, un génie scientifique déterminé à détruire 
         le programme spatial américain. Alors que le compte à rebours du 
         désastre commence, Bond doit se rendre en Jamaïque, où il rencontre la 
         belle Honey Ryder (Ursula Andress), pour affronter un méchant 
@@ -72,8 +75,9 @@
 
       <p>
         Le «James Bond Theme» est le principal thème musical des films de James 
-        Bond et a figuré dans tous les films d' Eon Productions Bond depuis DR. 
-        NO, sorti en 1962. La pièce a été utilisée comme fanfare 
+        Bond et a figuré dans tous les films d' Eon Productions Bond depuis 
+        <strong class="yellow">DR. </strong> <strong class="red"> NO</strong> 
+        , sorti en 1962. La pièce a été utilisée comme fanfare 
         d'accompagnement de la séquence du canon du pistolet dans chaque film de
         James Bond.
       </p>
@@ -83,8 +87,10 @@
 
       <img src="img/dancing.gif">
       <p>
-        Graphic Design Yuma Comazzi Copositeur John Barry
-        Film James Bond (DR.NO) Directeur Terence Young
+        <strong class="red">Graphic Design</strong> Yuma Comazzi <strong 
+        class="yellow">compositeur</strong>John Barry <strong 
+        class="red">Film</strong>James Bond (DR.NO) <strong 
+        class="yellow">Directeur</strong> Terence Young
       </p>
     </footer>
   </body>
