enfin ajouté les 3 images qui manquaient au headerslayyyyy

--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
         </strong> <strong class="red"> NO.</strong>
       </p>
 
+    <img src="img/john_barry_portrait_1.png">
+    <img src="img/john_barry_portrait2.png">
+    <img src="img/john_barry_portrait3.png">
+
     </header>
 
     <main>
