little changement de balises dans le html pour le navigateur

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     
       <hr>
       <h1>
-        <a href="#john_barry">JOHN BARRY |</a>
-        <a href="#dr_no">DR. NO |</a>
+        <a href="#john_barry">JOHN BARRY<strong class="yellow">|</strong></a>
+        <a href="#dr_no">DR. NO<strong class="yellow"> |</strong></a>
         <a href="#james_bond_theme">JAMES BOND THEME</a>
       </h1>
       <hr> 
@@ -41,8 +41,8 @@
 
     <nav>
         <img src="img/john_barry_portrait_1.png">
-        <img src="img/john_barry_portrait2.png">
-        <img src="img/john_barry_portrait3.png">
+        <img src="img/john_barry_portrait_2.png">
+        <img src="img/john_barry_portrait_3.png">
     </nav>
 
     </header>
