scroll behavior ajouté

--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
       <p>
         <strong class="red">Graphic Design</strong> Yuma Comazzi <strong 
         class="yellow">compositeur</strong>John Barry <strong 
-        class="red">Film</strong>James Bond (DR.NO) <strong 
-        class="yellow">Directeur</strong> Terence Young
+        class="red">Film</strong> James Bond (DR.NO) <strong 
+        class="yellow">Directeur</strong> Terence Young.
       </p>
     </footer>
   </body>
