ajout spotify code

--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@
           d'accompagnement de la séquence du canon du pistolet dans chaque film 
           de James Bond.
         </p>
+
+        <img src="img/spotify_code.svg" alt="Code spotify">
     
     </main>
 
